 * the cache module was turned into a true lua module.
 * a design flaw in the cache module was fixed that lead to incorrect
   caching for the builtin proj-storage server. Caching was disabled due
   to this problem in the default configuration and is enabled now.
 * support for per-project caches (using the %l format) in e2.conf is
   no longer available. Cache is designed to be per user.

e2factory-2.3.3
 * use sha1 module instead of calling the sha1sum tool
 * optimization: use stat() instead of calling 'test -f'
 * rotate build logfiles
 * introduce a hash cache depending on timestamps to further speed up
   BuildId calculation
 * release mode verifies hashes for server side files
 * release mode checks that the correct version of e2factory is used with
   a project

e2factory-2.3.2
 * temporary build directories are located in a version specific directory
   now
 * e2-install-e2 installs branches properly now. Git refs can be specified.
 * a bug in e2-build --force-rebuild was fixed that prevented forced rebuilds
 * the chroot environment is locked now when in use
 * hardlinks are used when preparing the result tarball, if possible, to
   improve performance
 * logfiles are rotated instead of deleting them
 * a bug in configuration validation for files sources was fixed
 * a bug in validating the licences attribute in source configurations was
   fixed
 * the location of a patch that does not apply is included in the error
   message now
 * unused code was removed
 * the faq section in the documentation was extended
 * outdated documentation was removed
 * a bug was fixed that lead to partial results being left on local servers
   or in the cache when copying was interrupted
 * storing results to cache and to servers is optimized by trying to
   create hardlinks if possible. This may fail due to filesystem boundaries.
   In that case the code falls back to copying.
   Hardlinking is not possible if push_permissions is set for the particular
   server.