@@ -174,6 +174,9 @@ if not rc then
   e2lib.abort(e:cat(re))
 end
 
+-- write version file
+local rc, re = e2lib.write_file(e2lib.global_interface_version_file, string.format("%d\n", v))
+
 -- call e2-install-e2
 e2_install_e2 = string.format("'%s' '%s/e2-install-e2'", 
 			buildconfig.LUA, buildconfig.TOOLDIR)
