@@ -23,6 +23,14 @@ endif
 # list the latest one first
 SYNTAX = 2_3_2
 
+# Global interface version describes the server side data format
+# It is stored in a file named `version` in the server side project location.
+# This file is copied to .e2/global_version when checking out a project for
+# access by the local tools.
+#
+# List the latest one first. It will be used when creating new projects.
+GLOBAL_INTERFACE_VERSION = 2
+
 # when creating a project a current set of local tools is requested
 DEFAULT_LOCAL_BRANCH = master
 DEFAULT_LOCAL_TAG = $(TAG)
